--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -5,5 +5,5 @@
     <corners android:radius="8dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/baby_blue"/>
+        android:color="@color/secondary"/>
 </shape>
